sanger/sites/tissuestability/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tissue-stability-cell-atlas
  labels:
    app: tissue-stability-cell-atlas
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: tissue-stab
  selector:
    app: tissue-stability-cell-atlas
---
apiVersion: v1
kind: Service
metadata:
  name: tissue-stability-oesophagus
  labels:
    app: tissue-stability-oesophagus
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: tissue-stability-oesophagus
---
apiVersion: v1
kind: Service
metadata:
  name: tissue-stability-lung
  labels:
    app: tissue-stability-lung
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: tissue-stability-lung
---
apiVersion: v1
kind: Service
metadata:
  name: tissue-stability-spleen
  labels:
    app: tissue-stability-spleen
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: tissue-stability-spleen
